--- a/src/components/Admin/AdminHeader/AdminHeader.css
+++ b/src/components/Admin/AdminHeader/AdminHeader.css
@@ -24,8 +24,9 @@
   .header {
     background-color: var(--must-green);
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-    position: relative;
+    position: fixed;
     z-index: 50;
+    width: 100%;
   }
   
   .header-container {
