--- a/src/Pages/Admin/ReportsPage/Reports.css
+++ b/src/Pages/Admin/ReportsPage/Reports.css
@@ -1,5 +1,5 @@
 
-.report-must-green { background-color: #00BF63; }
+.report-must-green { background-color: #00D666; }
 .report-must-green-text { color: #00BF63; }
 .report-must-dark { background-color: #2D1A12; }
 .report-must-gold { color: #f0b41c; }
